--- a/assets/style.styl
+++ b/assets/style.styl
@@ -9,7 +9,8 @@
 
 .w-container
     background-color: rgba(64, 62, 62, 0.3);
-    color: #fff;
+    color: #fff
+    position relative
     border-radius 20px
     box-shadow: 
         0px 3px 1px -2px rgba(0, 0, 0, 0.2), 
@@ -17,12 +18,42 @@
         0px 1px 5px 0px rgba(0, 0, 0, 0.12);
     
 .w-container .sub-details
-    background-color #fff
-    padding 30px
+    background-color rgba(16, 7, 29, 0.7)
+    padding 30px 0px
     border-radius 0px 0px 30px 30px
 
+.w-main-temp
+    width: 120px
+    text-align center
+    
 .w-min-temp,
 .w-max-temp
     opacity 0.6
-    margin-top 15px 
+    text-align center
+    margin-top 25px 
     min-width 100px
+
+.v-slide-group__next .mdi-chevron-right::before,
+.v-slide-group__prev .mdi-chevron-left::before
+    color: #fff !important
+
+.w-description
+    font-size: 11px
+
+.w-date
+    color #fff
+    opacity 0.6
+    display flex
+    align-items center
+    margin 0px 10px 
+    font-size 18px
+    transition 0.3s
+    cursor pointer
+
+.w-date.active
+    opacity 1
+    font-size 32px
+    transtition 0.3s
+
+.capitalize
+    text-transform capitalize
